cmake_minimum_required(VERSION 3.30)
project(zydis-bridge VERSION 0.1 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(vendor/zydis)
add_library(${PROJECT_NAME} STATIC)
target_sources(${PROJECT_NAME} PUBLIC FILE_SET CXX_MODULES FILES
        src/zydis.cppm
        src/decoder.cppm
        src/assembler.cppm
)

target_link_libraries(${PROJECT_NAME} PRIVATE Zydis::Zydis)
